styled contact button

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -738,6 +738,26 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
+.contact-btn {
+
+  transition: .35s;
+  font-size: 1.8rem;
+}
+.contact-btn.light {
+  background-color: #493260;
+  color: lavender;
+}
+.contact-btn.dark {
+  background-color: #25bad8dd;
+}
+.contact-btn:hover {
+  background-color: #00ffffd6 !important;
+  color: black;
+}
+.contact-link:after {
+  display: none;
+}
+
 @media (max-height: 414px){
   .welcome-container{
     display: none;
