welcome page background change

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -90,7 +90,7 @@ body {
   /* background: linear-gradient(5deg, #5441ab 0%, #ee2dc179 90%); */
 }
 .welcome-page.light {
-  background-color: #f2ecec;
+  background-color: #f2ececeb;
 }
 
 .welcome-title {
