--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -130,6 +130,7 @@ body {
   background-image: url('./images/dice.jpg');
   border-top: 2px solid #56e4e4;
   /* border-bottom: 2px solid #bfe8e8; */
+  background-attachment: fixed;
   background-position: center;
   object-fit: contain;
   background-size: cover;
