--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -98,7 +98,7 @@ body {
 }
 .welcome-page::before {
   content: "";
-  position: absolute;
+  position: fixed;
   top: 0; left: 0;
   width: 100%; height: 100%;
   background-image: url(./images/sun.jpg);
@@ -107,6 +107,9 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   filter: grayscale(69%);
+  -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
 }
 .welcome-page {
   padding-top: 4vh;
@@ -194,7 +197,7 @@ body {
 	}
 	.home-img:before {
     /* grid-row: 1 / 2; */
-       grid-column-start: 1;
+   grid-column-start: 1;
    grid-column-end: 1;
    grid-row: 2/ span 4;
    /* grid-row-start: 2;
@@ -207,8 +210,12 @@ body {
     grid-column-start: 2;
     grid-column-end: 5;
     grid-row: 1/ span 5;
+    border-left: none;
 
-		border-left: none;
+    content: 'Software Engineer';
+    text-align: right;
+    padding-top: 1rem;
+    padding-right: .5rem;
   }
 .home-img-msg {
   /* margin: 1rem 1rem -.5rem 0; */
@@ -296,6 +303,7 @@ body {
 }
 .project-inner-icon {
   width: 100px;
+  align-items: flex-start
 }
 .home-slide {
   text-align: left;
@@ -1036,6 +1044,13 @@ input:checked + .slider:before {
   }
   .semicircle.svg svg {
     bottom: -1px;
+  }
+}
+
+@media screen and (min-width: 40em) {
+  .home-img::after {
+    font-size: 2rem;
+    padding-right: 1.5rem;
   }
 }
 
