--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -22,11 +22,12 @@
   --dark-teal: #437380;
 }
 
-body {
+html, body {
   background-color: var(--main-bg);
   font-family: GeoSans;
   user-select: none;
   overflow-x: hidden;
+
   width: 100vw;
 }
 .header-item{
@@ -93,14 +94,14 @@ body {
   /* background: linear-gradient(5deg, #5441ab 0%, #ee2dc179 90%); */
 }
 .welcome-page.light {
-
   position:relative;
 }
 .welcome-page::before {
   content: "";
   position: fixed;
   top: 0; left: 0;
-  width: 100%; height: 100%;
+  width: 100%;
+  height: 100%;
   background-image: url(./images/sun.jpg);
   background-size: cover;
   background-position: bottom;
@@ -110,6 +111,7 @@ body {
   -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
+  overflow: hidden;
 }
 .welcome-page {
   padding-top: 4vh;
@@ -957,7 +959,8 @@ input:checked + .slider:before {
 
 }
 
-@media(max-width: 1024px){
+/* iPad portrait */
+@media only screen and (min-width : 768px) and (max-width : 1024px) {
   .home-img-msg {
     font-size: 2.5rem;
   }
@@ -967,7 +970,43 @@ input:checked + .slider:before {
   .description-container{
     margin-left: 2rem;
   }
+  .welcome-page svg {
+    bottom: -5px;
+  }
+  body {
+    overflow-x: hidden;
+  }
+  .welcome-page::before {
+    background-attachment: initial;
+  }
+  .home-slide {
+    font-size: 26px;
+    text-shadow: 0px 0px 0px rgba(255,255,255,0.9);
+    text-align: center;
+  }
+
 }
+/* iPad landscape */
+@media only screen and (min-width: 834px) and (max-width: 1194px)  {
+  .welcome-page::before {
+    background-attachment: initial;
+  }
+  .home-slide {
+    font-size: 26px;
+    text-shadow: 0px 0px 0px rgba(255,255,255,0.9);
+    text-align: center;
+  }
+  .welcome-page svg {
+    bottom: -3px;
+  }
+}
+
+/* @media only screen and (min-width: 1366px){
+  .welcome-page {
+    background: pink;
+  }
+} */
+
 @media (max-width: 768px) {
   .mobile-skills-row {
     justify-content: space-evenly;
@@ -990,7 +1029,7 @@ input:checked + .slider:before {
     text-align: center;
   }
   .realmer-slide {
-    width: 4rem;
+    display: none;
   }
   .semicircle.svg svg {
     bottom: -2px;
@@ -999,6 +1038,12 @@ input:checked + .slider:before {
 }
 
 @media (max-width: 575px) {
+  .welcome-page::before {
+    background-attachment: initial;
+  }
+  .home-img-msg {
+    font-size: 2rem;
+  }
   .mobile-header-icons {
     display: flex;
   }
@@ -1051,6 +1096,9 @@ input:checked + .slider:before {
   .home-img::after {
     font-size: 2rem;
     padding-right: 1.5rem;
+  }
+  body {
+    overflow-x: hidden;
   }
 }
 
