--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -971,6 +971,7 @@ input:checked + .slider:before {
     margin-left: 2rem;
   }
   .welcome-page svg {
+    width: 105vw;
     bottom: -5px;
   }
   body {
@@ -983,6 +984,17 @@ input:checked + .slider:before {
     font-size: 26px;
     text-shadow: 0px 0px 0px rgba(255,255,255,0.9);
     text-align: center;
+  }
+  .project-header {
+    font-size: 2.5rem;
+  }
+  .project-inner-icon {
+    width: 20%;
+    height: 20%;
+  }
+  .home-example-gif {
+    width: auto;
+    padding: 150px !important;
   }
 
 }
@@ -997,7 +1009,19 @@ input:checked + .slider:before {
     text-align: center;
   }
   .welcome-page svg {
+    width: 105vw;
     bottom: -3px;
+  }
+  .project-header {
+    font-size: 2.5rem;
+  }
+  .project-inner-icon {
+    width: 20%;
+    height: 20%;
+  }
+  .home-example-gif {
+    width: auto;
+    padding: 150px;
   }
 }
 
@@ -1008,6 +1032,9 @@ input:checked + .slider:before {
 } */
 
 @media (max-width: 768px) {
+  .welcome-page::before {
+    background-attachment: initial;
+  }
   .mobile-skills-row {
     justify-content: space-evenly;
   }
@@ -1091,14 +1118,11 @@ input:checked + .slider:before {
     bottom: -1px;
   }
 }
-
+/* on screens larger than mobile */
 @media screen and (min-width: 40em) {
   .home-img::after {
     font-size: 2rem;
     padding-right: 1.5rem;
-  }
-  body {
-    overflow-x: hidden;
   }
 }
 
